support recursive types
